--- a/smallscreen.css
+++ b/smallscreen.css
@@ -28,4 +28,25 @@ header{
     left: 3vh; 
     top: 4vh;
 }
+section{
+    position:relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    overflow-x: hidden;
+}
+.parallax{
+    background: white;
+}
+#home h2{
+    position: relative;
+    font-family: 'Nabla';
+    font-size: 30px;
+    letter-spacing: 2px;
+    top: -290px;
+}
 }
