--- a/smallscreen.css
+++ b/smallscreen.css
@@ -5,6 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     scroll-behavior: smooth;
+    height: -webkit-fill-available;
 }
 body{
     overflow-x: hidden;
