--- a/smallscreen.css
+++ b/smallscreen.css
@@ -1,53 +1,6 @@
-@media (min-width:480px) {
+@media all and (min-width:480px) {
     @import url('https://fonts.googleapis.com/css?family=Koulen|Nabla|Rancho&display=swap');
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    scroll-behavior: smooth;
-    height: -webkit-fill-available;
-}
-body{
-    overflow-x: hidden;
-    background:black;
-    min-height: 100vh;
-    overflow-x: hidden;
-}
-header{
-    position: absolute;
-    left: 0;
-    width: 100%;
-    padding: 0px 5px 5px 5px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    z-index: 1000;
-    overflow: hidden;
-}
-.logo{
-    width: 50px;
-    left: 3vh; 
-    top: 4vh;
-}
-section{
-    position:relative;
-    width: 100%;
-    height: 100vh;
-    padding: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    overflow: hidden;
-    overflow-x: hidden;
-}
-.parallax{
-    background: white;
-}
-#home h2{
-    position: relative;
-    font-family: 'Nabla';
-    font-size: 20px;
-    letter-spacing: 2px;
-    top: -290px;
-}
+     .logo{
+        width: 80px;
+    }
 }
