--- a/smallscreen.css
+++ b/smallscreen.css
@@ -1,6 +1,9 @@
-@media all and (min-width:480px) {
+@media all and (min-width:320px) {
     @import url('https://fonts.googleapis.com/css?family=Koulen|Nabla|Rancho&display=swap');
      .logo{
         width: 80px;
+    }
+    nav a{
+        color: black;
     }
 }
