--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 body{
     overflow-x: hidden;
-    background:black;
+    background:white;
     min-height: 100vh;
     overflow-x: hidden;
 }
@@ -153,5 +153,11 @@ section img#pot{
         padding: 0;
         box-sizing: border-box;
         scroll-behavior: smooth;
+    }
+    body{
+        overflow-x: hidden;
+        background:white;
+        min-height: 100vh;
+        overflow-x: hidden;
     }
 }
