--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ section img#pot{
     }
     .logo{
         width: 110px;
-        left: 2vh; 
-        top: 2vh;
+        left: 0; 
+        top: 1vh;
     }
 }
