--- a/styles.css
+++ b/styles.css
@@ -22,17 +22,8 @@ header{
     z-index: 1000;
     overflow: hidden;
 }
-header.sticky{
-    padding: 5px 100px;
-    background:  black;
-}
-header.sticky .logo ,
-header.sticky nav a{
-    color: white;
-    z-index: 1000;
-}
 .logo{
-    width: 175px;
+    width: 180px;
     left: 3vh; 
     top: 4vh;
 }
@@ -44,9 +35,8 @@ nav{
     display: flex;
     justify-content:space-around;
     align-items: center;
-}
-nav{
-    list-style: none;
+    position: sticky;
+    top: 50px;
 }
 nav a{
     position: relative;
