--- a/styles.css
+++ b/styles.css
@@ -143,7 +143,7 @@ section img#pot{
     letter-spacing: 2px;
     top: -290px;
 }
-@media (min-width: 320px){
+@media (max-width: 320px){
     *{
         margin: 0;
         padding: 0;
