testing media queries

--- a/styles.css
+++ b/styles.css
@@ -146,6 +146,29 @@ section img#pot{
 }
 }
 @media only screen and (max-width:320px){
+    *{
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+        scroll-behavior: smooth;
+    }
+    body{
+        overflow-x: hidden;
+        background:white;
+        min-height: 100vh;
+        overflow-x: hidden;
+    }
+    header{
+        position:absolute;
+        left: 0;
+        width: 100%;
+        padding: 0px 5px 5px 5px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1000;
+        overflow: hidden;
+    }
     .logo{
         width: 80px;
     }
