--- a/styles.css
+++ b/styles.css
@@ -172,4 +172,13 @@ section img#pot{
     .logo{
         width: 85px;
     }
-}
+    nav{
+        height: 5vh;
+        left: 0;
+        width: 35%;
+        display: flex;
+        justify-content:space-around;
+        position: sticky;
+        list-style: none;
+    }
+    }
