--- a/styles.css
+++ b/styles.css
@@ -30,13 +30,15 @@ nav{
     height: 5vh;
     left: 0;
     width: 35%;
-    display: flex;
+    
     justify-content:space-around;
     position: sticky;
     list-style: none;
 }
 nav a{
     position: relative;
+    display: block;
+    float: right;
     font-family: 'Koulen';
     text-decoration: none;
     font-size: 18px;
@@ -65,6 +67,15 @@ nav .menu-hamburger{
     cursor: pointer;
     display: none;
 }
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+  }
+  
+  .sticky + .parallax {
+    padding-top: 60px;
+  }
 section{
     position:relative;
     width: 100%;
