--- a/styles.css
+++ b/styles.css
@@ -169,6 +169,11 @@ section img#pot{
         position:fixed;
         width: 100%;
         display: flex;
+        padding: 0px 5px 5px 5px;
+        justify-content: space-between;
+        align-items: center;
+        z-index: 1000;
+        overflow: hidden;
     }
     .logo{
         width: 85px;
@@ -212,8 +217,8 @@ section img#pot{
     }
     section img#grl1{
         z-index: 10;
-        left: 14vh;
-        top: 8vh;
+        left: 8vh;
+        top: 4vh;
         bottom: 10vh;
         width: 30%;
         transition: 0.6%;
@@ -221,9 +226,9 @@ section img#pot{
     section img#grl2{
         z-index: 10;
         width: 35%;
-        top: 10vh;
+        top: 5vh;
         bottom: 10vh;
-        left: 20vh;
+        left: 40vh;
     }
     section img#pot{
         width: 13%;
