--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,8 @@ section img#pot{
     }
     nav{
         position: absolute;
+        width: 100%;
+        height: 100vh;
     }
     nav a{
         display: flex;
