--- a/styles.css
+++ b/styles.css
@@ -180,6 +180,7 @@ section img#pot{
     }
     nav{
         position: absolute;
+        background: transparent;
         width: 100%;
         height: 100vh;
     }
