--- a/styles.css
+++ b/styles.css
@@ -183,6 +183,9 @@ section img#pot{
         background: transparent;
         width: 100%;
         height: 100vh;
+        padding: 0;
+        top: 0;
+        left: 0;
     }
     nav a{
         display: flex;
