--- a/styles.css
+++ b/styles.css
@@ -189,11 +189,13 @@ section img#pot{
         display: flex;
         justify-content: center;
         align-items: center;
+        backdrop-filter: blur(7px);
         z-index: 1000;
     }
     nav a{
         display: flex;
         flex-direction: column;
+        align-items: center;
 
     }
     nav .menu-hamburger{
