--- a/styles.css
+++ b/styles.css
@@ -65,6 +65,8 @@ nav a:hover::after{
 nav .menu-hamburger{
     cursor: pointer;
     display: none;
+    right: 50px;
+    top: 0;
     position: absolute;
     width: 35px;
 }
