--- a/styles.css
+++ b/styles.css
@@ -280,6 +280,16 @@
     transform: scale(1.1);
 }
   
+.row{
+    /*background: rgba(0, 0, 0, .2);*/
+    border-radius: 0.9%;
+}
+
+
+
+
+
+
 
 @media screen and (max-width: 600px) {
     * {
